send-button added

--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -69,6 +69,7 @@
             <div class="form-group">
                 <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Your message" rows="3"></textarea>
             </div>
+            <button type="button" class="btn btn-light">Send</button>
         </form>
     </div>
 </main>
