--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -20,11 +20,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Übersicht<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Impressum</a>
+                    <a class="nav-link" href="#">Übersicht</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Impressum<span class="sr-only">(current)</span></a>
                 </li>
 
             </ul>
@@ -33,13 +33,13 @@
 </header>
 <main>
     <div class="container">
-        <h2>Impressum</h2>
+        <h2 class="my-sm-3">Impressum</h2>
         <p> Follow us in social networks</p>
         <div class="card-deck  my-sm-3">
             <div class="card">
                 <div class="card-body" >
                     <h5 class="card-title">Denis Kovalev</h5>
-                    <a href="#" class="btn btn-dark">Git Hub</a>
+                    <a href="#" class="btn btn-dark">Github</a>
                     <a href="#" class="btn btn-primary">Facebook</a>
                     <a href="#" class="btn btn-info">LinkedIn</a>
                 </div>
@@ -47,7 +47,7 @@
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Alisa Korytova</h5>
-                    <a href="#" class="btn btn-dark">Git Hub</a>
+                    <a href="#" class="btn btn-dark">Github</a>
                     <a href="#" class="btn btn-primary">Facebook</a>
                     <a href="#" class="btn btn-info">LinkedIn</a>
                 </div>
