--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -34,7 +34,7 @@
 <main>
     <div class="container">
         <h2 class="my-sm-3">Impressum</h2>
-        <p> Follow us in social networks</p>
+        <p>Wir in sozialen Netzwerken</p>
         <div class="card-deck  my-sm-3">
             <div class="card">
                 <div class="card-body" >
@@ -53,23 +53,23 @@
                 </div>
             </div>
         </div>
-        <p> Use this form to contact us:</p>
+        <p> Formular, um uns zu kontaktieren:</p>
         <form>
             <div class="form-group">
                 <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Email">
             </div>
             <div class="form-row">
                 <div class="form-group col">
-                    <input type="text" class="form-control" placeholder="First name">
+                    <input type="text" class="form-control" placeholder="Vorname">
                 </div>
                 <div class="form-group col">
-                    <input type="text" class="form-control" placeholder="Last name">
+                    <input type="text" class="form-control" placeholder="Nachname">
                 </div>
             </div>
             <div class="form-group">
-                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Your message" rows="3"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Nachricht" rows="3"></textarea>
             </div>
-            <button type="button" class="btn btn-light">Send</button>
+            <button type="button" class="btn btn-light">Senden</button>
         </form>
     </div>
 </main>
