changes to creating form, some changes to impressum

--- a/pages/create-todo.html
+++ b/pages/create-todo.html
@@ -34,21 +34,30 @@
 <main>
     <div class="container">
         <h2>Create new TODO</h2>
-        <form>
+        <form method="post">
             <div class="form-group">
                 <label for="todoText">TODO-Text:</label>
-                <textarea class="form-control" id="todoText" rows="3" maxlength="160" placeholder="Your TODO-Text here"></textarea>
+                <textarea class="form-control" id="todoText" rows="3" maxlength="160" placeholder="Your TODO-Text here" name="text"></textarea>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-5">
                     <label for="datePicker">Deadline:</label>
-                    <input type="date" class="form-control" id="datePicker">
+                    <input type="date" class="form-control-lg form-control" id="datePicker" name="date">
                 </div>
                 <div class="form-group col-md-7">
-                    <label for="percentReady">Percent ready: <span id="rangeValue"></span></label>
-                    <input type="range" class="custom-range" min="0" max="100" step="0.5" id="percentReady" value="50">
+
+                        <label for="percentReady">Percent ready: </label>
+                        <div class="input-group input-group-sm col-md-3 col-lg-2 p-0">
+                            <input type="number" id="rangeValue" name="percent" class="form-control" min="0" max="100" step="0.5" maxlength="4">
+                            <div class="input-group-append">
+                                <span class="input-group-text">%</span>
+                            </div>
+                        </div>
+
+                    <input type="range" class="custom-range" min="0" max="100" step="0.5" id="percentReady" value="50" aria-label="rangeValue" aria-describedby="rangeValue">
 
                 </div>
+
             </div>
             <button type="submit" class="btn btn-primary">Save</button>
         </form>
@@ -60,15 +69,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script>document.getElementById('datePicker').valueAsDate = new Date()</script>
-<script>
-    var slide = document.getElementById("percentReady");
-    var y = document.getElementById("rangeValue");
-    y.innerHTML = slide.value +'%';
+<script src="../js/script.js" type="text/javascript"></script>
 
-    slide.oninput = function() {
-        y.innerHTML = this.value+'%';
-    }
-</script>
 </body>
 </html>
