--- a/pages/edit-todo.html
+++ b/pages/edit-todo.html
@@ -20,11 +20,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Übersicht</a>
-                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Impressum<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Übersicht<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Impressum</a>
                 </li>
 
             </ul>
@@ -33,43 +33,33 @@
 </header>
 <main>
     <div class="container">
-        <h2 class="my-sm-3">Impressum</h2>
-        <p> Follow us in social networks</p>
-        <div class="card-deck  my-sm-3">
-            <div class="card">
-                <div class="card-body" >
-                    <h5 class="card-title">Denis Kovalev</h5>
-                    <a href="#" class="btn btn-dark">Github</a>
-                    <a href="#" class="btn btn-primary">Facebook</a>
-                    <a href="#" class="btn btn-info">LinkedIn</a>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Alisa Korytova</h5>
-                    <a href="#" class="btn btn-dark">Github</a>
-                    <a href="#" class="btn btn-primary">Facebook</a>
-                    <a href="#" class="btn btn-info">LinkedIn</a>
-                </div>
-            </div>
-        </div>
-        <p> Use this form to contact us:</p>
-        <form>
+        <h2>Edit your TODO</h2>
+        <form method="post">
             <div class="form-group">
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Email">
+                <label for="todoText">TODO-Text:</label>
+                <textarea class="form-control" id="todoText" rows="3" maxlength="160" placeholder="Your TODO-Text here" name="text">Your text will be here</textarea>
             </div>
             <div class="form-row">
-                <div class="form-group col">
-                    <input type="text" class="form-control" placeholder="First name">
+                <div class="form-group col-md-5">
+                    <label for="datePicker">Deadline:</label>
+                    <input type="date" class="form-control-lg form-control" id="datePicker" name="date">
                 </div>
-                <div class="form-group col">
-                    <input type="text" class="form-control" placeholder="Last name">
+                <div class="form-group col-md-7">
+
+                    <label for="percentReady">Percent ready: </label>
+                    <div class="input-group input-group-sm col-md-3 col-lg-2 p-0">
+                        <input type="number" id="rangeValue" name="percent" class="form-control" min="0" max="100" step="0.5" maxlength="4">
+                        <div class="input-group-append">
+                            <span class="input-group-text">%</span>
+                        </div>
+                    </div>
+
+                    <input type="range" class="custom-range" min="0" max="100" step="0.5" id="percentReady" value="50" aria-label="rangeValue" aria-describedby="rangeValue">
+
                 </div>
+
             </div>
-            <div class="form-group">
-                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Your message" rows="3"></textarea>
-            </div>
-            <button type="button" class="btn btn-light">Send</button>
+            <button type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
 </main>
@@ -79,5 +69,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="../js/script.js" type="text/javascript"></script>
+
 </body>
 </html>
