--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -13,7 +13,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">TODO-Tracker</a>
+        <span class="navbar-brand unselectable">TODO-Tracker</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Übersicht</a>
+                    <a class="nav-link" href="../index.html">Übersicht</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Impressum<span class="sr-only">(current)</span></a>
@@ -31,9 +31,9 @@
         </div>
     </nav>
 </header>
-<main>
+<main class="mt-3">
     <div class="container">
-        <h2 class="my-sm-3">Impressum</h2>
+        <h2 class="mb-3">Impressum</h2>
         <p>Wir in sozialen Netzwerken</p>
         <div class="card-deck  my-sm-3">
             <div class="card">
@@ -69,7 +69,7 @@
             <div class="form-group">
                 <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Nachricht" rows="3"></textarea>
             </div>
-            <button type="button" class="btn btn-light">Senden</button>
+            <button type="button" class="btn btn-primary">Senden</button>
         </form>
     </div>
 </main>
