--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/global.css">
     <title>TODO-Tracker</title>
 </head>
 <body>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">TODO-Tracker</a>
+        <span class="navbar-brand unselectable">TODO-Tracker</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,23 +24,27 @@
                     <a class="nav-link" href="#">Übersicht<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Impressum</a>
+                    <a class="nav-link" href="pages/impressum.html">Impressum</a>
                 </li>
 
             </ul>
         </div>
     </nav>
 </header>
-<main>
+<main class="mt-3">
     <div class="container">
-        <h2>Übersicht</h2>
+        <div class="d-inline-flex">
+            <h2 class="mr-3 mb-3">Übersicht</h2>
+            <a href="pages/create-todo.html" class="btn btn-primary mb-3">neue TODO</a>
+        </div>
+
         <table class="table">
             <thead>
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">TODO</th>
                 <th scope="col">Deadline</th>
-                <th scope="col">Progress</th>
+                <th scope="col">Fortschritt</th>
             </tr>
             </thead>
             <tbody>
@@ -94,15 +98,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script>document.getElementById('datePicker').valueAsDate = new Date()</script>
-<script>
-    var slide = document.getElementById("percentReady");
-    var y = document.getElementById("rangeValue");
-    y.innerHTML = slide.value +'%';
 
-    slide.oninput = function() {
-        y.innerHTML = this.value+'%';
-    }
-</script>
+
 </body>
 </html>
