new color scheme

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/global.css">
     <title>TODO-Tracker</title>
 </head>
-<body>
+<body class="bg-light">
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
         <span class="navbar-brand unselectable">TODO-Tracker</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="d-inline-flex">
             <h2 class="mr-3 mb-3">Übersicht</h2>
-            <a href="pages/create-todo.html" class="btn btn-primary mb-3">neue TODO</a>
+            <a href="pages/create-todo.html" class="btn btn-custom-primary mb-3">neue TODO</a>
         </div>
 
         <table class="table">
