--- a/pages/edit-todo.html
+++ b/pages/edit-todo.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
         <span class="navbar-brand unselectable">TODO-Tracker</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,8 +20,8 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Übersicht</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="../index.html">Übersicht<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="impressum.html">Impressum</a>
@@ -59,8 +59,8 @@
                 </div>
 
             </div>
-            <button type="submit" class="btn btn-primary">Speichern</button>
-        </form>
+            <button type="submit" class="btn btn-custom-primary">Speichern</button>
+        </form>`
     </div>
 </main>
 
