--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
         <span class="navbar-brand unselectable">TODO-Tracker</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,11 +20,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Übersicht</a>
-                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Impressum<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">Übersicht<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Impressum</a>
                 </li>
 
             </ul>
@@ -69,7 +69,7 @@
             <div class="form-group">
                 <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Nachricht" rows="3"></textarea>
             </div>
-            <button type="button" class="btn btn-primary">Senden</button>
+            <button type="button" class="btn btn-custom-primary">Senden</button>
         </form>
     </div>
 </main>
