--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <th scope="col">TODO</th>
                 <th scope="col">Deadline</th>
                 <th scope="col">Fortschritt</th>
+                <th scope="col">Einstellungen</th>
             </tr>
             </thead>
             <tbody>
@@ -60,6 +61,10 @@
                         </div>
                     </div>
                 </td>
+                <td>
+                    <button type="button" class="btn btn-info">Bearbeiten</button>
+                    <button type="button" class="btn btn-danger">Löschen</button>
+                </td>
             </tr>
             <tr>
                 <th scope="row">2</th>
@@ -73,6 +78,10 @@
                         </div>
                     </div>
                 </td>
+                <td>
+                    <button type="button" class="btn btn-info">Bearbeiten</button>
+                    <button type="button" class="btn btn-danger">Löschen</button>
+                </td>
             </tr>
             <tr>
                 <th scope="row">3</th>
@@ -85,6 +94,10 @@
                             45%
                         </div>
                     </div>
+                </td>
+                <td>
+                    <button type="button" class="btn btn-info">Bearbeiten</button>
+                    <button type="button" class="btn btn-danger">Löschen</button>
                 </td>
             </tr>
             </tbody>
