new color scheme

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <td>Stochastik HA</td>
                 <td>26.04.19</td>
                 <td>
-                    <div class="progress">
+                    <div class="progress mt-1">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100"
                              aria-valuemin="0" aria-valuemax="100" style="width:100%">
                             100%
@@ -62,8 +62,8 @@
                     </div>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-info">Bearbeiten</button>
-                    <button type="button" class="btn btn-danger">Löschen</button>
+                    <a href="pages/edit-todo.html" class="btn btn-sm btn-custom-primary">Bearbeiten</a>
+                    <button type="button" class="btn btn-sm btn-danger">Löschen</button>
                 </td>
             </tr>
             <tr>
@@ -71,7 +71,7 @@
                 <td>Geschenk fuer Max</td>
                 <td>03.05.19</td>
                 <td>
-                    <div class="progress">
+                    <div class="progress mt-1">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100"
                              aria-valuemin="0" aria-valuemax="100" style="width:0%">
                             0%
@@ -79,8 +79,8 @@
                     </div>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-info">Bearbeiten</button>
-                    <button type="button" class="btn btn-danger">Löschen</button>
+                    <a href="pages/edit-todo.html" class="btn btn-sm btn-custom-primary">Bearbeiten</a>
+                    <button type="button" class="btn btn-sm btn-danger">Löschen</button>
                 </td>
             </tr>
             <tr>
@@ -88,7 +88,7 @@
                 <td>Englisch Kurs</td>
                 <td>31.07.19</td>
                 <td>
-                    <div class="progress">
+                    <div class="progress mt-1">
                         <div class="progress-bar" role="progressbar" aria-valuenow="100"
                              aria-valuemin="0" aria-valuemax="100" style="width:45%">
                             45%
@@ -96,8 +96,8 @@
                     </div>
                 </td>
                 <td>
-                    <button type="button" class="btn btn-info">Bearbeiten</button>
-                    <button type="button" class="btn btn-danger">Löschen</button>
+                    <a href="pages/edit-todo.html" class="btn btn-sm btn-custom-primary">Bearbeiten</a>
+                    <button type="button" class="btn btn-sm btn-danger">Löschen</button>
                 </td>
             </tr>
             </tbody>
