--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -20,11 +20,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="../index.html">Übersicht<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Impressum</a>
+                    <a class="nav-link" href="../index.html">Übersicht</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Impressum<span class="sr-only">(current)</span></a>
                 </li>
 
             </ul>
